Minor typos and syntax fixes

--- a/json-endpoints.html
+++ b/json-endpoints.html
@@ -6,7 +6,7 @@ layout: default
 
 <h1 class="h2">{{ page.title }}</h1>
 
-<p>The original idea behing this project was to provide Gedling Borough Council bin collection data in the iCalender format for importing or subscribing as calendar data. JSON is also another well used and portable format which other applications can use which this project supports.</p>
+<p>The original idea behind this project was to provide Gedling Borough Council bin collection data in the iCalender format for importing or subscribing as calendar data. JSON is also another well used and portable format which other applications can use which this project supports.</p>
 
 <p>Each bin collection has it's own JSON endpoint, which is automatically generated from the original iCal data. Using the <a href="https://github.com/kewisch/ical.js">ical.js library</a>, every time a website deployment build occurs, the JSON data is generated from the original iCal source data.</p>
 
