Minor doc tweaks

--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@ sitemap: false
     <li><a href="https://github.com/jamesmacwhite/gedling-borough-council-bin-calendars">View the source/repository</a></li>
 </ul>
 
-<p><strong>Please note:</strong> This is not an official Gedling Borough Council website. If you are looking for Gedling Borough Council services, please go to the gedling.gov.uk website for more information.</p>
+<p><strong>Please note:</strong> This is not an official Gedling Borough Council website or service. If you are looking for Gedling Borough Council services, please go to the gedling.gov.uk website for more information.</p>
 
 <div class="d-grid gap-2 d-md-block mb-4">
     <a href="{{ site.url }}" class="btn btn-lg btn-dark">Back to the homepage</a>
