--- a/bin-collections.html
+++ b/bin-collections.html
@@ -10,6 +10,6 @@ layout: default
 
 <p>You can now get the collection dates specifically for your address be using the search form below. This data comes directly from the <a href="https://waste.digital.gedling.gov.uk/w/webpage/bin-collections" rel="nofolow">Gedling Borough Council bin collection day web page.</a> This website makes searches to the Gedling website and provides the data in consumable formats.</p>
 
-<p>For best results, use search values like "101 Arnold Lane" or "101 Arnold Lane Gedling Nottingham NG4 4HE"</p>
+<p>For best results, use full street addresses like "101 Arnold Lane" or full addresses like "101 Arnold Lane Gedling Nottingham NG4 4HE"</p>
 
 {% include bin-collection-calendar.html %}
