--- a/index.html
+++ b/index.html
@@ -7,25 +7,9 @@ title: "Waste, Recycling, Glass and Garden bin schedules"
     <h2>Find your collection day</h2>
 
     <p>Search by your address or street name to find your bin collection schedule/calendar.</p>
-
-    <ul class="nav nav-tabs mb-3" id="search-tabs" role="tablist">
-        <li class="nav-item" role="presentation">
-            <button class="nav-link" id="address-search-tab" data-bs-toggle="tab" data-bs-target="#address-search" type="button" role="tab" aria-controls="address-search-pane" aria-selected="true">Address search</button>
-        </li>
-        <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="street-search-tab" data-bs-toggle="tab" data-bs-target="#street-search" type="button" role="tab" aria-controls="street-search-pane" aria-selected="false">Street name search</button>
-        </li>
-    </ul>
 </div>
 
-<div class="tab-content">
-  <div class="tab-pane" id="address-search" role="tabpanel" aria-labelledby="address-search-tab" tabindex="0">
-    {% include bin-collection-calendar.html %}
-  </div>
-  <div class="tab-pane show active" id="street-search" role="tabpanel" aria-labelledby="street-search-tab" tabindex="0">
-    {% include find-collection-schedule.html %}
-  </div>
-</div>
+{% include collection-combo-search.html %}
 
 <div class="d-print-none">
 
